--- a/aboutmiart.html
+++ b/aboutmiart.html
@@ -390,22 +390,12 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2">
-                            <i class="fa fa-map-marker-alt me-3"></i>Portugal
-                        </p>
-                        <p class="mb-2">
-                            <i class="fa fa-phone-alt me-3"></i>+351
-                            932857248
-                        </p>
-                        <p class="mb-2">
-                            <i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com
-                        </p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
+                        <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/santiagocolibriolibri"><i
-                                    class="fab fa-facebook"></i></a>
                             <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
@@ -415,11 +405,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Art
-                                Soul Colibri</a>,
-                            All rights reserved. Designed by
-                            <a class="border-bottom" href="index.html">Plus
-                                Works Services</a>
+                            &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
+                            Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
                         </div>
                     </div>
                 </div>
