--- a/ebook.html
+++ b/ebook.html
@@ -190,10 +190,8 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
                     <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/atelier_colibri"><i
-                                class="fab fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social"
-                            href="https://www.facebook.com/santiagocolibriolibri"><i class="fab fa-facebook"></i></a>
+                            href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
                     </div>
                 </div>
@@ -214,18 +212,18 @@
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-    </div>
+</div>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
 </body>
 
 </html>
