--- a/aboutme.html
+++ b/aboutme.html
@@ -141,8 +141,21 @@
         <!-- Navbar End -->
 
         <!-- Arte IntuitivaStart -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-2">
             <div class="container">
+
+                <div class="container-xxl py-1">
+                    <div class="container">
+                        <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
+                            style="max-width: 1200px;">
+                            <div class="text-center">
+                                <img src="img/img_aboutmy3.jpg" class="img-fluid" alt="Icon"
+                                    style="width: 200pxf; height: 200px;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h1 class="text-center mb-3">Sobre mim e a Art Soul Colibri</h1>
                     <p> Ana Santiago,  56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos ,
