--- a/aguarelas.html
+++ b/aguarelas.html
@@ -235,7 +235,7 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://www.artsoulcolibri@gmail.com" ai><i class="fa fa-envelope"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="mailto:artsoulcolibri@gmail.com" ai><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
