--- a/cursos.html
+++ b/cursos.html
@@ -140,7 +140,7 @@
         </div>
         <!-- Navbar End -->
 
-        
+
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
             onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
@@ -154,91 +154,93 @@
                         <img class="img-fluid w-100" src="img/cursos_1.jpg">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="mb-4">Curso:</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
-                        diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                        dolore erat amet</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                </div>
+                <h4 class="text-left mb-3">- Uma viagem interior com pintura de Mandalas</h4>
+                <p>Este Curso Além de te ensinar uma das formas de Desenhar/Pintar uma Mandala, é um
+                    convite também a unificação, o abraçar e libertar o teu Eu Interior tendo consciência de
+                    como o podes trazer para fora , através do Desenho/Pintura de Mandalas ; um caminho de
+                    autoconhecimento através da Arte.</p>
+                <h4 class="text-left mb-3">- O Despertar através da arte intuitiva</h4>
+                <p>Ao Encontro da Criatividade no voo da Pintura Intuitiva é um workshop onde vais abrir as
+                    portas do teu, Eu recatado através da tua intuição abrindo as asas para acolher a tua
+                    criatividade.</p>
+                <p>Imagina soltar a tua criatividade sem amarras, sem regras, apenas deixando-te fluir através
+                    das cores e pinceladas..</p>
+                <p>Explorar a ligação profunda entre a tua intuição e a tua expressão artística. Sem
+                    preocupações com &quot;estar certos&quot; ou &quot;fazer bonito&quot;, vamos simplesmente permitir
+                    que a criatividade tome conta. Cada um de vocês descobrirá um novo caminho.</p>
+                <h4 class="text-left mb-3">- Meditação activa com Arte</h4>
+                <p>Um Caminho de autodescoberta através da meditação e criação de mandalas.  Neste
+                    workshop, vamos entender a ligação profunda entre a mente, o corpo e a alma, utilizando a
+                    arte como ferramenta para acalmar a mente e despertar a criatividade interior.</p>
+                <p>Através de técnicas e meditação guiadas, vais aprender a conectar-te com o teu eu interior
+                    e a “Semear” a paz interior.  Vamos explorar alguns tipos de mandalas geométricas, desde
+                    as mais simples às mais complexas, e aprenderemos a utilizar os seus padrões como um
+                    poderoso instrumento de foco e concentração.</p>
+                <h4 class="text-left mb-3">- Flores de Poder</h4>
+                <p>Curso Flores de Poder (O Resgate da flor da essência de Alma)</p>
+                <p>Um Caminho de Conexão com a tua Verdadeira e autêntica essência.</p>
+                <h4 class="text-left mb-3">- Aulas Livres</h4>
+                <p>Pintura intuitiva e Desenho e pintura de Mandalas</p>
+
+
+
             </div>
-        </div>
-    </div>
 
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <video width="320" height="240" controls>
-                        <source src="img/video_Art_Suol_Colibri.mp4" type="video/mp4">
-                        <source src="movie.ogg" type="video/ogg">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="mb-4">Curso:</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
-                        diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                        dolore erat amet</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                </div>
+
+            <!-- Cursos End -->
+
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
+                <a class="btn btn-primary py-3 px-5" href="https://form.jotform.com/251193714240046">Clique aqui para
+                    mais
+                    informações</a>
             </div>
-        </div>
-    </div>
-    <!-- Cursos End -->
 
-    <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
-        <a class="btn btn-primary py-3 px-5" href="https://form.jotform.com/251193714240046">Clique aqui para mais informações</a>
-    </div>
-
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-2">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Get in touch</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
-                    <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social"
-                            href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="mailto:artsoulcolibri@gmail.com" ai><i class="fa fa-envelope"></i></a>
+            <!-- Footer Start -->
+            <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
+                <div class="container py-2">
+                    <div class="row g-5">
+                        <div class="col-lg-3 col-md-6">
+                            <h5 class="text-white mb-4">Get in touch</h5>
+                            <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                            <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
+                            <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
+                            <div class="d-flex pt-2">
+                                <a class="btn btn-outline-light btn-social"
+                                    href="https://www.instagram.com/atelier_colibri"><i
+                                        class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-light btn-social" href="mailto:artsoulcolibri@gmail.com" ai><i
+                                        class="fa fa-envelope"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="copyright">
+                        <div class="row">
+                            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                                &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
+                                Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- Footer End -->
+
+            <!-- Back to Top -->
+            <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
         </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
-                        Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer End -->
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-</div>
+        <!-- JavaScript Libraries -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="lib/wow/wow.min.js"></script>
+        <script src="lib/easing/easing.min.js"></script>
+        <script src="lib/waypoints/waypoints.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-<!-- Template Javascript -->
-<script src="js/main.js"></script>
+        <!-- Template Javascript -->
+        <script src="js/main.js"></script>
 </body>
 
 </html>
