--- a/cursos.html
+++ b/cursos.html
@@ -148,16 +148,13 @@
 
         <!-- Cursos Start -->
 
-        <div class="container-xxl py-2">
+        <div class="container-xxl py-5">
             <div class="container">
-                <div class="container-xxl py-1">
-                    <div class="container">
-                        <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
-                            style="max-width: 1200px;">
-                            <div class="text-center">
-                                <img src="img/cursos_1.jpg" class="img-fluid" alt="Icon"
-                                    style="width: 400pxf; height: 400px;">
-                            </div>
+                <div class="container">
+                    <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
+                        style="max-width: 500px;">
+                        <div class="text-center">
+                            <img class="img-fluid w-100" src="img/cursos_1.jpg">
                         </div>
                     </div>
                 </div>
@@ -190,6 +187,13 @@
                 <h4 class="text-left mb-3">- Aulas Livres</h4>
                 <p>Pintura intuitiva e Desenho e pintura de Mandalas</p>
             </div>
+
+
+
+
+            </div>
+        </div>
+                
             <!-- Cursos End -->
 
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
