--- a/aboutmiart.html
+++ b/aboutmiart.html
@@ -285,6 +285,19 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-xxl py-1">
+            <div class="container">
+                <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
+                    style="max-width: 1200px;">
+                    <div class="text-center">
+                        <img src="img/img_aboutmy3.jpg" class="img-fluid" alt="Icon"
+                            style="width: 200pxf; height: 140px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <div class="container-xxl py-0">
             <div class="container">
                 <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px">
