--- a/cursos.html
+++ b/cursos.html
@@ -160,11 +160,37 @@
                 </div>
 
                 <h4 class="text-left mb-3">- Uma viagem interior com pintura de Mandalas</h4>
+
+                <div class="container-xxl py-1">
+                    <div class="container">
+                        <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
+                            style="max-width: 1200px;">
+                            <div class="text-center">
+                                <img src="img/curso_3.jpg" class="img-fluid" alt="Icon"
+                                    style="width: 200pxf; height: 140px;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <p>Este Curso Além de te ensinar uma das formas de Desenhar/Pintar uma Mandala, é um
                     convite também a unificação, o abraçar e libertar o teu Eu Interior tendo consciência de
                     como o podes trazer para fora , através do Desenho/Pintura de Mandalas ; um caminho de
                     autoconhecimento através da Arte.</p>
                 <h4 class="text-left mb-3">- O Despertar através da arte intuitiva</h4>
+
+                <div class="container-xxl py-1">
+                    <div class="container">
+                        <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
+                            style="max-width: 1200px;">
+                            <div class="text-center">
+                                <img src="img/cursos_2.jpg" class="img-fluid" alt="Icon"
+                                    style="width: 200pxf; height: 140px;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <p>Ao Encontro da Criatividade no voo da Pintura Intuitiva é um workshop onde vais abrir as
                     portas do teu, Eu recatado através da tua intuição abrindo as asas para acolher a tua
                     criatividade.</p>
